--- a/domain.yml
+++ b/domain.yml
@@ -10,18 +10,38 @@ intents:
 - ask_excersise
 - ask_eat_healthy
 - ask_lower_stress
+- inform
+- out_of_scope
 
 slots:
   email:
     type: text
     influence_conversation: false
     mappings: []
+  confirm_excersise:
+    type: unfeaturized
+  excersise:
+    type: unfeaturized
+  sleep:
+    type: unfeaturized 
+  diet:
+    type: unfeaturized
+  goal:
+    type: unfeaturized 
+  stress:
+    type: unfeaturized
+
+entities:
+  - exercise
+  - sleep
+  - stress
+
 responses:
   utter_greet:
   - text: |
-      Hello! How can I help you?
+      Hello! It's time for your daily wellness check.
   - text: |
-      Hi!
+      Hi!, lets record your progress for today.
   utter_ask_email:
   - text: |
       What is your email address?
@@ -40,7 +60,40 @@ responses:
      30 mins cardio would be daily and 30 mins resistance training three times a week would be excellent
   utter_diet_info:
   - text: |
-     Low fat based foods, high protein, vegetable and moderate sugar intake.    
+     Low fat based foods, high protein, vegetable and moderate sugar intake.
+  utter_ask_confirm_exercise:
+  - text: |
+     Did you excersise today?
+  utter_ask_sleep:
+  - text: |
+     How many hours were you asleep at night?
+  utter_ask_excersise:
+  - text: |
+     What kind of exersise, did  you do?
+  utter_ask_diet:
+  - text: |
+     What did you eat?
+  utter_ask_stress:
+  - text: |
+     How stressed are you feeling
+  utter_ask_goal:
+  - text: |
+     What is your monthly goal
+  utter_slots_value:
+  - text: |
+     Here,s your daily wellness log:\n
+     - Exercised?: {confirm_excersise}\n
+     - Type of excersise: {excersise}\n
+     - Sleep: {sleep}\n
+     - Eating well?: {diet}\n
+     - Stress level: {stress}\n
+     - Goal: {goal}
+  utter_no_worries:
+  - text: |
+     No problem :)
+  utter_ask_continue:
+  - text: |
+     Sorry i cant understand you, Do you want to continue
 
 actions:
 - '...'
@@ -50,8 +103,26 @@ actions:
 - utter_diet_info
 - utter_excercise_info
 - utter_stress_info
+- utter_no_worries
+- utter_ask_continue
+- utter_slots_value
+- utter_ask_goal
+- utter_ask_stress
+- utter_ask_excersise
+- utter_ask_diet
+- utter_ask_confirm_exercise
+- utter_ask_sleep
+
 
 forms:
   newsletter_form:
     required_slots:
     - email
+  health_form:
+    required_slots:
+    - exercise
+    - sleep
+    - stress
+    - confirm_excersise
+    - goal
+    - diet
