--- a/config.yml
+++ b/config.yml
@@ -28,4 +28,5 @@ policies:
   max_history: 5
   epochs: 100
   constrain_similarities: true
+- name: FormPolicy
 assistant_id: 20230411-182358-orthogonal-diatonic
